# bacheca

backend/: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.dev  README.md  conftest.py  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  pytest.ini
backend/bulletin/: __init__.py  admin.py  apps.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
backend/bulletin/migrations/: 0001_initial.py  0002_initial.py  0002_make_listing_type_optional.py  0003_section_custom_listing_types.py  __init__.py
backend/config/: api_urls.py  settings.py  urls.py
backend/tests/: test_health.py
backend/users/: admin.py  apps.py  models.py  permissions.py  serializers.py  signals.py  tests.py  urls.py  views.py
backend/users/migrations/: 0001_initial.py  0002_phone_number_required.py
docs/: backend.md  frontend.md
frontend/: .dockerignore  Dockerfile  Dockerfile.dev  docker-compose.dev.yml  docker-compose.yml  next.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/components/: AuthModal.tsx  Header.tsx  ListingCard.tsx  ListingModal.tsx  ListingsSection.tsx  LoginModal.tsx  SectionTabs.tsx
frontend/src/app/i-miei-annunci/: page.tsx
frontend/src/app/modifica-annuncio/[id]/: page.tsx
frontend/src/app/nuovo-annuncio/: page.tsx
frontend/src/app/profilo/: page.tsx
frontend/src/lib/: api.ts  types.ts
